make tab styles consistent, fix scrollbar thickness, other fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Omnes';
+  src: url('/fonts/Omnes Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+
 .text-stroke-outside {
   -webkit-text-stroke: 3px white;
 }
@@ -19,24 +27,6 @@
 
 .team-tab:hover {
   background-color: #7559fc;
-  color: white;
-}
-
-.alumni-tab {
-  max-width: 200px;
-}
-
-.alumni-tab:hover {
-  background-color: #00D3A9;
-  color: white;
-}
-
-.alumni-tab {
-  max-width: 200px;
-}
-
-.alumni-tab:hover {
-  background-color: #00D3A9;
   color: white;
 }
 
